k8s/scheduler/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: greenpay-scheduler
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-api-and-dns
  namespace: greenpay-scheduler
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: greenpay-scheduler
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 443
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
